Update code for Java 21 features